Handle z-index bugs when the menu is open on mobile size

--- a/00_src/css/03_components/_carousel.styl
+++ b/00_src/css/03_components/_carousel.styl
@@ -92,7 +92,7 @@
     &__navigation
         position fixed
         display block
-        z-index 900
+        z-index 1000
         top 0
         height 0px
         left 0
