--- a/00_src/css/04_layout/_header.styl
+++ b/00_src/css/04_layout/_header.styl
@@ -44,6 +44,8 @@
             top 0rem
 
 .header.is-open
+    z-index 1003
+    
     .menu
         left 0
 
